# Robotic_Poject

./: README.md
first_inv_kin_controller/: CMakeLists.txt  controller_plugins.xml  package.xml
first_inv_kin_controller/msg/: pos.msg
first_inv_kin_controller/src/: inv_kin_controller.cpp
first_rrr/: CMakeLists.txt  package.xml
first_rrr/launch/: rrbot_world.launch  test_display.launch
first_rrr/urdf/: conf.rviz  material.xacro  model.urdf  names.xacro  parts.xacro  prova.urdf  robot_rrr.gazebo  robot_rrr.xacro
first_rrr/world/: rrbot.world
first_rrr_control/: CMakeLists.txt  package.xml
first_rrr_control/config/: BS.yaml  CT_parameter.yaml  OSCT_parameter.yaml  first_rrr_control.yaml  rrr_eff_PID_cont.yaml  rrr_eff_vel_cont.yaml  test_custom_cntr.yaml
first_rrr_control/launch/: BS.launch  OSCT_gaz.launch  first_rrr_control.launch  inv_kin_gaz.launch
gazebo_clik/: CMakeLists.txt  controller_plugins.xml  package.xml
gazebo_clik/src/: gazebo_clik.cpp
kinematic_simulator/: CMakeLists.txt  package.xml
kinematic_simulator/include/: kin_sim_class.hpp
kinematic_simulator/launch/: test_param.launch
kinematic_simulator/msg/: ee_pos.msg
kinematic_simulator/src/: kin_sim.cpp  kin_sim_class.cpp
rrr_dynamic_controller/: CMakeLists.txt  controllers_plugin.xml  package.xml
rrr_dynamic_controller/include/rrr_dynamic_controller/: back_stepping.hpp  computed_torque.hpp  oper_space_ct.hpp
rrr_dynamic_controller/src/: back_stepping.cpp  computed_torque.cpp  oper_space_ct.cpp
serial_kin_man/: CMakeLists.txt  package.xml
(+9 files in other folders)
